# misistemhil

./: README.md
a-backplates/a00_hilbackplate/: a00_hilbackplate.kicad_pcb  a00_hilbackplate.kicad_prl  a00_hilbackplate.kicad_pro  a00_hilbackplate.kicad_sch
b-hil-boards/b00_hil/: b00_hil.dsn  b00_hil.kicad_pcb  b00_hil.kicad_prl  b00_hil.kicad_pro  b00_hil.ses
b-hil-boards/b01_hil/: b01_hil.kicad_pcb  b01_hil.kicad_prl  b01_hil.kicad_pro  b01_hil.kicad_sch  b01_hil.ses
b-hil-boards/b02_hil/: b02.dsn  b02.kicad_pcb  b02.kicad_prl  b02.kicad_pro  b02.kicad_sch  b02.rules  b02.ses  fp-info-cache  sym-lib-table
b-hil-boards/b03_hil/: b02.dsn  b02.rules  b02.ses  b03.dsn  b03.kicad_pcb  b03.kicad_prl  b03.kicad_pro  b03.kicad_sch  b03.rules  b03.ses  fp-lib-table  sym-lib-table
b-hil-boards/b04_hil/: b04.kicad_pcb  b04.kicad_prl  b04.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
b-hil-boards/b05_hil/: b02.dsn  b02.rules  b02.ses  b05.kicad_pcb  b05.kicad_sch  fp-info-cache  sym-lib-table
b-hil-boards/b06_hil/: b06.kicad_pcb  b06.kicad_prl  (+3 more)
b-hil-boards/b06_hil/firmware/components/display/: CMakeLists.txt  display.c  display_canvas.c  display_controller.c  display_driver.c  display_fonts.c  display_geometry_test.c  display_layout_templates.c  display_qr.c  display_renderer.c  display_task.c
b-hil-boards/b06_hil/firmware/components/display/include/: display.h  display_canvas.h  display_controller.h  display_driver.h  display_fonts.h  display_geometry_test.h  display_layout_templates.h  display_qr.h  display_renderer.h  display_task.h  display_types.h
(+397 files in other folders)
